--- a/oms-app/package.json
+++ b/oms-app/package.json
@@ -12,14 +12,18 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@pinia/nuxt": "^0.11.0",
+    "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
+    "echarts": "^5.6.0",
     "nuxt": "^3.17.3",
     "nuxt-app": "file:",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@types/vue": "^1.0.31",
     "@vue/compiler-sfc": "^3.5.13"
   }
 }
