--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     gateway:
       routes:
         - id: auth-service
-          uri: http://localhost:8082
+          uri: http://auth-service:8082
           predicates:
             - Path=/auth/**
       globalcors:
